# podcast-digest-agent

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADK_IMPLEMENTATION_ANALYSIS.md  ADK_MIGRATION_SUMMARY.md  CHIRP_VOICE_UPGRADE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  FRONTEND_DEPLOYMENT_READY.md  LICENSE  README.md  dev-requirements.txt  docker-compose.yml  input_processor.py  main.py  migration_validation.py  mock_successful_response.json  pyproject.toml  requirements.txt  setup.sh  start_server.py  test_chirp_voices.py  test_deployment.sh  test_deployment_verification.py  test_endpoint.py  test_fixed_deployment.py  test_input_processor.py  test_proxy_debug.py  test_proxy_rotation.py  test_transcript.py
.well-known/: agent.json
UI-code/: index.html  tailwind.config.js
adk_research/: test_basic_agent.py
ai_docs/: context.md  project.txt
client/: .env.production  .gitignore  README.md  package-lock.json  package.json  vercel.json
docs/: ARCHITECTURE.md  context.md  project.txt
input/: youtube_links.txt
podcast-digest-ui/: mock_data.json  next.config.ts  (+4 more)
server/: Procfile  deploy_fix.sh  dev-requirements.txt  pyproject.toml  requirements.txt  start_server.py
server/src/: exceptions.py  main.py
server/src/adk_agents/: __init__.py  podcast_agent.py  podcast_agent_sequential.py
server/src/adk_runners/: pipeline_runner.py  websocket_bridge.py
server/src/adk_tools/: audio_tools.py  transcript_tools.py
server/src/api/v1/: router.py
server/src/api/v1/endpoints/: audio.py  config.py  debug.py  tasks.py
server/src/config/: proxy_config.py  settings.py
server/src/core/: audio_store.py
server/src/models/: api_models.py
server/src/tools/: audio_tools.py
server/src/utils/: create_test_audio.py  proxy_health.py
(+169 files in other folders)
